Fix google cover fetch again

BUG: 277214